# mcp-host

./: Cargo.toml  mcp.json
examples/host/: cargo.toml
examples/host/src/: main.rs  mcp_manger.rs
